# saas-project-backend

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  pyproject.toml  run.py  setup_vm.sh
app/: __init__.py  app.py
app/config/: __init__.py  database.py  my_settings.py
app/controllers/: __init__.py  client_secret_737019788917-t6916l42kbn7hkku8oa0rknglus5fhl6.apps.googleusercontent.com.json  dashboard_controller.py  dashboard_fetch_controller.py  dashboard_refresh_controller.py  description_generator_controller.py  gemini_key_controller.py  playlist_controller.py  playlist_selection_controller.py  privacy_status_controller.py  schedule_controller.py  thumbnail_generator_controller.py  time_stamps_generator.py  title_generator_controller.py  user_controller.py  video_controller.py  video_details_controller.py  youtube_credentials_controller.py  youtube_token_controller.py  youtube_token_service.py  youtube_upload_controller.py
app/data/: api_config.json
app/models/: __init__.py  dashboard_overview_model.py  dashboard_playlist_model.py  dashboard_playlist_names_model.py  dashboard_playlist_video_model.py  dashboard_video_model.py  gemini_key_model.py  playlist_model.py  privacy_status_model.py  schedule_model.py  user_model.py  video_details_model.py  video_model.py  youtube_credentials_model.py  youtube_token_model.py
app/routes/: __init__.py  auth_routes.py  dashboard_fetch_routes.py  dashboard_refresh_routes.py  dashboard_routes.py  (+14 more)
frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
(+46 files in other folders)
